# polterdesk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: app.rc
src/: app_state.rs  boot.rs  lib.rs  main.rs  settings.rs  startup.rs
src/desktop/: finder.rs  mod.rs  positions.rs  taskbar.rs  toggle.rs
src/ui/: hotkey_input.rs  mod.rs  settings_window.rs  theme.rs
src/winapi_thread/: hook.rs  hotkey.rs  mod.rs  tray.rs
tests/: boot_test.rs  integration.rs  positions_test.rs  settings_test.rs  startup_state_test.rs  state_machine_test.rs  toggle_cycle_test.rs  unit.rs
