[package]
name = "polterdesk"
version = "1.1.0"
edition = "2021"
description = "Toggle desktop icon visibility via hotkey or double-click"

[dependencies]
gpui = "0.2.2"
gpui-component = { git = "https://github.com/longbridge/gpui-component", tag = "v0.5.1" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
embed-resource = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
